# aozora-wp-jobcan-sync

./: .envrc  .gitignore  CLAUDE.md  README.md
.claude/memory/: feedback_overengineering_recovery_2026-06-18.md  reference_illustration_baseline.md
.claude/skills/aozora-illust/: SKILL.md
.github/workflows/: setup-maps-api.yml
chatbot/: .dockerignore  Dockerfile  README.md  pyproject.toml
chatbot/scripts/: build_jobs_detail.py  probe_model.py
chatbot/src/chatbot/: app.py  config.py  gemini.py  knowledge.py  models.py  prompts.py  ratelimit.py
chatbot/src/chatbot/knowledge/: faq.yaml  jobs_detail.json  jobs_summary.json
chatbot/tests/: test_app.py  test_gemini.py  test_knowledge.py  test_ratelimit.py
docs/handoff/: GOAL.md  LATEST.md
docs/handoff/archive/: 2026-06-19-phase-2b-exec-deploy.md  2026-06-30-phase-a-illust-variants-pr40-41.md  2026-06-30-phase-a-mockup-refinement-5pr.md  (+2 more)
docs/runbooks/: wif-setup.md
docs/specs/: acceptance-criteria.md  chatgpt-ui-prompts.md  design-tokens.md  draft-review-flow.md  hosting-comparison.md  illust-refresh-ledger.md  jobcan-html-structure.md  sync-strategy.md
infra/: README.md  cleanup-policy.json
mockup/: README.md  index.html  job-preview.html  jobs-care.html  jobs-it.html  jobs-nurse.html  jobs-office.html  jobs.html
mockup/jobs/: 1668696.html  1690435.html  1777023.html  1801181.html  1891471.html  2052169.html  2091005.html  2103102.html  2174386.html  2174595.html  2174627.html  2174628.html  2199420.html  2199421.html  2199422.html  2199434.html  2199435.html  2215694.html  2215699.html  2215700.html  2215705.html  2215706.html  2215707.html  2264134.html  2264135.html  2264205.html  2264252.html  2264253.html  2267327.html  2267337.html  2267338.html  2267339.html  452341.html  90447.html  sample-care-staff.html
scripts/mockup-rebuild/: README.md  build_geo_data.py  fetch_all.py  job_ids.txt  rewrite_job_details.py  rewrite_jobs_html.py
sync/: .dockerignore  Dockerfile  README.md  pyproject.toml
sync/src/sync/: __main__.py  _validators.py  app.py  cache.py  cli.py  config.py  jobcan_client.py  models.py  parser.py  renderer.py  selectors.yaml
sync/src/sync/templates/: base.html  error.html  job_detail.html  job_list.html
sync/tests/: conftest.py  test_app.py  test_cache.py  test_cli.py  test_client.py  test_design_tokens.py  test_parser.py  test_renderer.py
sync/tests/fixtures/jobcan_responses/: job_1668696.html  job_1690435.html  job_1777023.html  job_2199420.html  job_2215694.html  job_broken.html  list_care.html  list_it.html  list_nurse.html  list_office.html
(+18 files in other folders)
