[project]
name = "aozora-chatbot"
version = "0.1.0"
description = "Aozora ACG recruitment mockup - Vertex AI Gemini FAQ chatbot backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.2",
    "uvicorn>=0.49.0",
    "google-genai>=1.0.0",
    "cachetools>=7.1.4",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]
# RUF001/2/3 flag ambiguous Unicode (full-width vs half-width). Japanese-language
# prompts/fixtures legitimately contain CJK punctuation — muted globally, same
# rationale as sync/pyproject.toml (the codebase is bilingual by design).
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
