[project]
name = "aozora-sync"
version = "0.1.0"
description = "Aozora ACG Phase B - Jobcan public page proxy with in-house template re-rendering"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.0",
    "bleach>=6.1.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sync"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]
# RUF001/2/3 flag ambiguous Unicode (full-width vs half-width). Japanese-language
# fixtures and test assertions legitimately contain CJK punctuation, so we mute
# these rules globally — the codebase is bilingual by design.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --tb=short"
